--- a/package.json
+++ b/package.json
@@ -3,50 +3,27 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "predeploy": "vite build",
-  "deploy": "gh-pages -d dist"
-},
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
-    "@docsearch/css": "^3.8.3",
-    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@floating-ui/react": "^0.27.4",
-    "@fontsource/dancing-script": "^5.1.1",
-    "@fontsource/inter": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.4.4",
-    "@mui/joy": "^5.0.0-beta.51",
-    "@mui/lab": "^6.0.0-beta.27",
     "@mui/material": "^6.4.4",
-    "@mui/styled-engine-sc": "^6.4.3",
-    "@mui/x-data-grid": "^7.26.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.2.1",
-    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
     "emailjs": "^4.0.3",
-    "flowbite-react": "^0.10.2",
-    "font-awesome": "^4.7.0",
-    "framer-motion": "^12.4.3",
     "moment": "^2.30.1",
-    "motion": "^12.4.3",
-    "pdfjs-dist": "^3.11.174",
-    "popper": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -54,24 +31,19 @@
     "react-intersection-observer": "^9.15.1",
     "react-pdf": "^9.2.1",
     "react-responsive": "^10.0.0",
-    "react-router-pagination": "^3.2.271",
-    "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.2",
+    "react-router-dom": "^7.2.0",
     "react-share": "^5.2.0",
     "react-slick": "^0.30.3",
-    "react-time-ago": "^7.3.3",
     "react-tweet": "^3.2.1",
     "slick-carousel": "^1.8.1",
-    "smooth-scroll": "^16.1.3",
-    "spy-scroll": "^1.0.12",
-    "swiper": "^11.2.4",
-    "three": "^0.173.0"
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "depcheck": "^1.4.7",
     "eslint": "^9.20.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
