--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "emailjs": "^4.0.3",
+    "fast-glob": "^3.3.3",
+    "gh-pages": "^6.3.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -51,7 +53,6 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^6.1.0"
