--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
+stats.html
+
+# Local environment files
 *.local
 
 # Editor directories and files
