--- a/package.json
+++ b/package.json
@@ -42,20 +42,19 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4"
   },
-"devDependencies": {
-  "@eslint/js": "^9.20.0",
-  "@types/react": "^19.0.8",
-  "@types/react-dom": "^19.0.3",
-  "@vitejs/plugin-react": "^4.3.4",
-  "depcheck": "^1.4.7",
-  "eslint": "^9.20.1",
-  "eslint-plugin-react": "^7.37.4",
-  "eslint-plugin-react-hooks": "^5.1.0",
-  "eslint-plugin-react-refresh": "^0.4.19",
-  "globals": "^15.15.0",
-  "rollup-plugin-visualizer": "^5.14.0",
-  "vite": "^6.1.0",
-  "gh-pages": "^6.3.0"
-}
-
+  "devDependencies": {
+    "@eslint/js": "^9.20.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
+    "globals": "^15.15.0",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "vite": "^6.1.0"
+  }
 }
