--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/montserrat": "^5.1.1",
+    "@fontsource/open-sans": "^5.1.1",
+    "@fontsource/raleway": "^5.1.1",
+    "@fontsource/roboto": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.5",
-    "@mui/material": "^6.4.4",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf/renderer": "^4.2.1",
+    "@mui/material": "^6.4.6",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "emailjs": "^4.0.3",
     "fast-glob": "^3.3.3",
+    "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-responsive": "^10.0.0",
@@ -43,8 +46,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "depcheck": "^1.4.7",
     "eslint": "^9.20.1",
