--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "emailjs": "^4.0.3",
     "fast-glob": "^3.3.3",
     "mdb-react-ui-kit": "^9.0.0",
@@ -33,6 +34,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
